@@ -7,7 +7,7 @@
  *      implementation of the pqxx::pipeline class
  *   Throughput-optimized query manager
  *
- * Copyright (c) 2003-2006, Jeroen T. Vermeulen <jtv@xs4all.nl>
+ * Copyright (c) 2003-2007, Jeroen T. Vermeulen <jtv@xs4all.nl>
  *
  * See COPYING for copyright license.  If you did not receive a file called
  * COPYING with this source code, please notify the distributor of this mistake,
@@ -229,7 +229,10 @@ bool pqxx::pipeline::obtain_result(bool expect_none)
   }
 
   pqxxassert(r);
-  const result res(r, 0, m_queries.begin()->second.get_query());
+  const result res(r,
+		0,
+		m_queries.begin()->second.get_query(),
+		m_Trans.conn().encoding_code());
 
   if (!have_pending())
   {
@@ -257,7 +260,7 @@ void pqxx::pipeline::obtain_dummy()
   if (!r)
     internal_error("pipeline got no result from backend when it expected one");
 
-  result R(r, 0, "[DUMMY PIPELINE QUERY]");
+  result R(r, 0, "[DUMMY PIPELINE QUERY]", m_Trans.conn().encoding_code());
   bool OK = false;
   try
   {
