@@ -2,6 +2,7 @@
  - New mixin base class pqxx_exception distinguishes libpqxx exception types
  - Several build problems with Visual C++ fixed
  - Uses strlcpy() where available, instead of strncpy()
+ - Keeps better track of applicable text encodings
 2.6.9
  - Removed old 1.x API (that means all identifiers with capital letters!)
  - Tested with all current libpq versions and oldest/newest supported backends
